--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+                <span>410-602-5008</span></a><div>* We Deliver ****</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
