--- a/index.html
+++ b/index.html
@@ -22,16 +22,9 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
-            </p>
+            <a href="index.html"><h1>FOOD, LLC</h1></a>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -43,28 +36,61 @@
         </div>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
+           <ul id="nav-list" class="nav navbar-nav navbar-right hidden-lg hidden-md visible-xs hidden-sm">
             <li>
-              <a href="menu-categories.html">
-                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+              <a href="#"><span class="hidden-lg hidden-md visible-xs hidden-sm"> Chicken  </span></a> 
             </li>
             <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+              <a href="#"><span class="hidden-lg hidden-md visible-xs hidden-sm"> Beef  </span></a> 
             </li>
             <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
-            </li>
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver ****</div>
+              <a href="#"><span class="hidden-lg hidden-md visible-xs hidden-sm"> Sushi  </span></a> 
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
       </div><!-- .container -->
     </nav><!-- #header-nav -->
 </header>
+
+<h1>OUR MENU</h1>
+
+<section class="menu">
+  <div class="content cont-1">
+      <div class="name na1">Chicken</div>
+          <div class="details">
+              <span>Gà hay gà nhà, gà Đồi (danh pháp hai phần: Gallus gallus, Gallus gallus domesticus) 
+                  là một loài chim đã được con người thuần hoá cách đây hàng nghìn năm. Một số ý kiến cho 
+                  rằng loài này có thuỷ tổ từ loài chim hoang dã ở Ấn Độ và loài gà rừng lông đỏ nhiệt đới 
+                  ở vùng Đông Nam Á. Trong thế giới loài chim, gà là loài vật có số lượng áp đảo nhất với 24 
+                  tỉ cá thể (thống kê đến năm 2003).</span>
+          </div>
+  </div>
+
+  <div class="content cont-2">
+      <div class="name na2">Beef</div>
+          <div class="details">
+              <span>Bò là tên gọi chung để chỉ các loài động vật trong chi động vật có vú với danh pháp khoa học 
+                  Bos, bao gồm các dạng bò rừng và bò nhà. Chi Bos có thể phân chia thành 4 phân chi là: Bos, 
+                  Bibos, Novibos, Poephagus, nhưng sự khác biệt giữa chúng vẫn còn gây tranh cãi. Chi này hiện 
+                  còn 5 loài còn sinh tồn. Tuy nhiên, một số tác giả coi chi này có tới 7 loài do các giống bò 
+                  thuần hóa cũng được họ coi là những loài riêng.</span>
+          </div>
+  </div>
+
+  <div class="content cont-3">
+      <div class="name na3">Sushi</div>
+          <div class="details">
+              <span>Sushi (すし, 寿司, 鮨, 鮓, 寿斗, 寿し, 壽司?) là một món ăn Nhật Bản gồm cơm trộn giấm (shari) 
+                  kết hợp với các nguyên liệu khác (neta). Neta và hình thức trình bày sushi rất đa dạng, 
+                  nhưng nguyên liệu chính mà tất cả các loại sushi đều có là shari. Neta phổ biến nhất là hải sản. 
+                  Thịt sống cắt lát gọi riêng là sashimi</span>
+          </div>
+  </div>
+
+</section>
+
+
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
